--- a/GraphDemo/GraphDemo.csproj
+++ b/GraphDemo/GraphDemo.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="Azure.Identity" Version="1.6.1" />
     <PackageReference Include="JavaScriptEngineSwitcher.Extensions.MsDependencyInjection" Version="3.3.0" />
     <PackageReference Include="JavaScriptEngineSwitcher.V8" Version="3.18.1" />
+    <PackageReference Include="Microsoft.AspNet.WebApi.Core" Version="5.2.9" />
     <PackageReference Include="Microsoft.AspNetCore.Cors" Version="2.2.0" />
     <PackageReference Include="Microsoft.ClearScript.V8.Native.win-x64" Version="7.2.5" />
     <PackageReference Include="Microsoft.Graph" Version="4.36.0" />
